@@ -1,3 +1,10 @@
+Mon Sep 19 11:45:00 UTC 2005  Simon Massey  <sma@prismtech.com>
+
+        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
+
+        Corrected the correction due to non-standard MSVC name,
+        Thanks to Martin J.N. Corino for the correct interpretation.
+
 Mon Sep 19 10:15:00 UTC 2005  Simon Massey  <sma@prismtech.com>
 
         * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
